# life-agent

./: Cargo.toml  README.md
src/: main.rs
src/internal/: methods.rs  mod.rs  models.rs
