[package]
name = "life-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "process"] }
appkit-nsworkspace-bindings = "0.1.2"
objc = "0.2.7"
sysinfo = "0.30.5"
anyhow = "1.0.79"
regex = "1.10.3"
